--- a/website/public/index.html
+++ b/website/public/index.html
@@ -8,7 +8,7 @@
 		content="width=device-width, initial-scale=1.0, maximum-scale=5.0, shrink-to-fit=no"
 	/>
 	<meta name="theme-color" content="#ffffff" />
-	<title>덕비스</title>
+	<title>CS376 | Final Project</title>
 </head>
 <body>
 <div id="root">
